First Commit for Assignment 4

--- a/index.html
+++ b/index.html
@@ -1,8 +1,49 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>Rail Racers LLC Concept Presentation</title>
    </head>
    <body>
+      <h1>Rail Racers LLC Concept Presentation</h1>
+      <main>
+      <h2>Rail Racers: Arkansas River</h2>
+      <!--Put Paragraphs here-->
+      <article>
+      <h3>Intro</h3>
+         <p>
+         In Colorado there is hardly a better way for many small towns to boast about their place in history than to showcase their connection with the Railroads or Mining. This country was built on the support of Railroads connecting many towns and destinations. Today many of those routes either have small sections in use or are fully abandoned. One example of this is along the Arkansas River from Can&#771on City to Leadville and beyond. 
+
+         Specifically in this valley there does exist the Royal Gorge Route Railroad which has been in operation for over 20 years as tourist hot spot serving over 150,000 passengers annually. This route operates from Can&#771on City to Parkdale and has many service options. One service which they are missing is for the ultimate nature and history enthusiasts. I am talking about Rail Racers pedal bikes and electric rail speeders.  
+
+         There are many examples across the country of a similar service being provided for those who want to enjoy a quieter and more intimate experience along many historic and scenic locations. The Arkansas River exemplifies all these attributes and still has an existing infrastructure. With this year-round attraction guests would have the ability to see this route in many forms.
+         </p> 
+      </article> 
+      <img src="images/Arkansas River Amenities.jpg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <p>Amenities along the Arkansas River.</p>
+      <article>
+      <h3>Types of Rail Racers</h3>
+         <p>
+         What we plan is to have pedal carts and electric converted golf carts for cruising along this route. Pedal carts would consist of either a two-seater or four-seater variant which all members have a pedal to help push the cart along. There would also be an electric assist for these carts. These pedal cars are for the active families or couples who are looking for an easy and affordable experience. The converted golf carts, as viewed below, will have the ability to travel at 25mph and would let guests travel further in shorter times.  They would also have a more cushioned seat and allow guests the ability to venture off the rails.
+         </p>
+      </article>
+      <img src="images/rail-bike.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <p>Pedal Cart.</p>
+      <img src="images/Cart Fixed Rail Wheels.jpeg" alt="River Amenities" width="600" height="300" style="vertical-align: right"> 
+      <p>Golf Cart with fixed rail wheels.</p>
+      <img src="images/Polaris Rail Speeder.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <p>Polaris Hi-Rail Conversion.</p>
+      <article>
+            <h3>Route Specifications</h3>
+         There would also be multiple stations along the way with each offering their own branch to serve. This allows for guests to choose their starting and ending locations anywhere from an hour to 8 hours. The Arkansas River is already a rafting mecca and many other activities for outdoor enthusiasts include zip lines and ropes courses, mountain biking, and hiking. Ideally, we would love to see Rail Racers all the way from Leadville to Parkdale. Eventually also branching down the other side of Tennessee Pass and down toward Vail. 
+      </p>
+      </article>
+      <img src="images/Arkansas River Rafting.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <p>Rails fun along the river from Leadville to Parkdale.</p>
+
+      <!--References Below Here-->
+
       <!-- Write your HTML in this file! -->
+   </main>
    </body>
+   <footer>Created by William Query Jun4 04, 2021</footer>
 </html>
