--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
          There are many examples across the country of a similar service being provided for those who want to enjoy a quieter and more intimate experience along many historic and scenic locations. The Arkansas River exemplifies all these attributes and still has an existing infrastructure. With this year-round attraction guests would have the ability to see this route in many forms.
          </p> 
       </article> 
-      <img src="images/Arkansas River Amenities.jpg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <img src="images/Arkansas River Amenities.jpg" alt="River Amenities" width="600" height="400"> 
       <p>Amenities along the Arkansas River.</p>
       <article>
       <h3>Types of Rail Racers</h3>
@@ -26,18 +26,18 @@
          What we plan is to have pedal carts and electric converted golf carts for cruising along this route. Pedal carts would consist of either a two-seater or four-seater variant which all members have a pedal to help push the cart along. There would also be an electric assist for these carts. These pedal cars are for the active families or couples who are looking for an easy and affordable experience. The converted golf carts, as viewed below, will have the ability to travel at 25mph and would let guests travel further in shorter times.  They would also have a more cushioned seat and allow guests the ability to venture off the rails.
          </p>
       </article>
-      <img src="images/rail-bike.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <img src="images/rail-bike.jpeg" alt="River Amenities" width="600" height="400" > 
       <p>Pedal Cart.</p>
-      <img src="images/Cart Fixed Rail Wheels.jpeg" alt="River Amenities" width="600" height="300" style="vertical-align: right"> 
+      <img src="images/Cart Fixed Rail Wheels.jpeg" alt="River Amenities" width="600" height="300" > 
       <p>Golf Cart with fixed rail wheels.</p>
-      <img src="images/Polaris Rail Speeder.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <img src="images/Polaris Rail Speeder.jpeg" alt="River Amenities" width="600" height="400" > 
       <p>Polaris Hi-Rail Conversion.</p>
       <article>
             <h3>Route Specifications</h3>
          There would also be multiple stations along the way with each offering their own branch to serve. This allows for guests to choose their starting and ending locations anywhere from an hour to 8 hours. The Arkansas River is already a rafting mecca and many other activities for outdoor enthusiasts include zip lines and ropes courses, mountain biking, and hiking. Ideally, we would love to see Rail Racers all the way from Leadville to Parkdale. Eventually also branching down the other side of Tennessee Pass and down toward Vail. 
       </p>
       </article>
-      <img src="images/Arkansas River Rafting.jpeg" alt="River Amenities" width="600" height="400" style="vertical-align: right"> 
+      <img src="images/Arkansas River Rafting.jpeg" alt="River Amenities" width="600" height="400" > 
       <p>Rails fun along the river from Leadville to Parkdale.</p>
       <p> </p>
 
