--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
       <title>Rail Racers LLC Concept Presentation</title>
+      <link href="/Users/wquery200/Documents/Assignment-4/assignment-4-html-me-something-KenzieQuery/styles.css" rel="stylesheet">
    </head>
    <body>
       <h1>Rail Racers LLC Concept Presentation</h1>
@@ -9,6 +10,7 @@
       <h2>Rail Racers: Arkansas River</h2>
       <!--Put Paragraphs here-->
       <article>
+
       <h3>Intro</h3>
          <p>
          In Colorado there is hardly a better way for many small towns to boast about their place in history than to showcase their connection with the Railroads or Mining. This country was built on the support of Railroads connecting many towns and destinations. Today many of those routes either have small sections in use or are fully abandoned. One example of this is along the Arkansas River from Can&#771on City to Leadville and beyond. 
@@ -21,7 +23,7 @@
       <img src="images/Arkansas River Amenities.jpg" alt="River Amenities" width="600" height="400"> 
       <p>Amenities along the Arkansas River.</p>
       <article>
-      <h3>Types of Rail Racers</h3>
+      <h3 class="headingThree">Types of Rail Racers</h3>
          <p>
          What we plan is to have pedal carts and electric converted golf carts for cruising along this route. Pedal carts would consist of either a two-seater or four-seater variant which all members have a pedal to help push the cart along. There would also be an electric assist for these carts. These pedal cars are for the active families or couples who are looking for an easy and affordable experience. The converted golf carts, as viewed below, will have the ability to travel at 25mph and would let guests travel further in shorter times.  They would also have a more cushioned seat and allow guests the ability to venture off the rails.
          </p>
@@ -29,11 +31,11 @@
       <img src="images/rail-bike.jpeg" alt="River Amenities" width="600" height="400" > 
       <p>Pedal Cart.</p>
       <img src="images/Cart Fixed Rail Wheels.jpeg" alt="River Amenities" width="600" height="300" > 
-      <p>Golf Cart with fixed rail wheels.</p>
+      <p id = "testP">Golf Cart with fixed rail wheels.</p>
       <img src="images/Polaris Rail Speeder.jpeg" alt="River Amenities" width="600" height="400" > 
-      <p>Polaris Hi-Rail Conversion.</p>
+      <p class= "funParagraph">Polaris Hi-Rail Conversion.</p>
       <article>
-            <h3>Route Specifications</h3>
+            <h3 id="mainHeading">Route Specifications</h3>
          There would also be multiple stations along the way with each offering their own branch to serve. This allows for guests to choose their starting and ending locations anywhere from an hour to 8 hours. The Arkansas River is already a rafting mecca and many other activities for outdoor enthusiasts include zip lines and ropes courses, mountain biking, and hiking. Ideally, we would love to see Rail Racers all the way from Leadville to Parkdale. Eventually also branching down the other side of Tennessee Pass and down toward Vail. 
       </p>
       </article>
